GNOME Bugzilla – Bug 653607
Arrays not annotated as such for introspection bindings
Last modified: 2011-07-01 11:32:57 UTC
Created attachment 190901 [details] [review] patch to add annotations The attached patch adds array annotations to clutter_texture_set_rgb_data, clutter_texture_set_yuv_data, clutter_texture_set_area_from_rgb_data, and clutter_stage_read_pixels. Otherwise, the generated introspection data expects to be given (or returns) a single integer, and it is impossible to correctly use the function. There may be more cases where this happens, these were the ones I found by grepping the .gir file.
Review of attachment 190901 [details] [review]: looks good.
Attachment 190901 [details] pushed to master