Arrays in parameters were not correctly annotated.

https://bugzilla.gnome.org/show_bug.cgi?id=653607